# qoi_rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
reference_images/kodak/: kodim01.qoi  kodim02.qoi  kodim03.qoi  kodim04.qoi  kodim05.qoi  kodim06.qoi  kodim07.qoi  kodim08.qoi  kodim09.qoi  kodim10.qoi  kodim11.qoi  kodim12.qoi  kodim13.qoi  kodim14.qoi  kodim15.qoi  kodim16.qoi  kodim17.qoi  kodim18.qoi  kodim19.qoi  kodim20.qoi  kodim21.qoi  kodim22.qoi  kodim23.qoi  kodim24.qoi
reference_images/misc/: fish.qoi  lenna.qoi  standards.qoi  theverge.qoi
reference_images/screenshots/: apple.com.qoi  cnn.com.qoi  duckduckgo.com.qoi  en.wikipedia.org.qoi  imdb.com.qoi  microsoft.com.qoi  news.ycombinator.com.qoi  nytimes.com.qoi  reddit.com.qoi  stripe.com.qoi  sublime.qoi
reference_images/textures/: pk01_door01_add.qoi  pk01_door01_local.qoi  pk01_door01_s.qoi  pk01_door01a_d.qoi  pk01_door01b_d.qoi  pk01_floor01_local.qoi  pk01_floor01_s.qoi  pk01_floor01a_d.qoi  pk01_floor01b_d.qoi  pk01_floor02_local.qoi  pk01_floor02_s.qoi  pk01_floor02a_d.qoi  pk01_floor02b_d.qoi  pk01_gra_floor01_d.qoi  pk01_gra_floor01_local.qoi  pk01_gra_floor01_s.qoi  pk01_gra_floor02_d.qoi  pk01_gra_floor02_local.qoi  pk01_gra_floor02_s.qoi  pk01_pan_floor01_local.qoi  pk01_pan_floor01_s.qoi  pk01_pan_floor01a_d.qoi  pk01_pan_floor01b_d.qoi  pk01_pan_floor02_local.qoi  pk01_pan_floor02_s.qoi  pk01_pan_floor02a_d.qoi  pk01_pan_floor02b_d.qoi  pk01_pan_trim01_d.qoi  pk01_pan_trim01_local.qoi  pk01_pan_trim01_s.qoi  pk01_pan_wall01_d.qoi  (+82 more)
src/: lib.rs  tests.rs
(+7 files in other folders)
