[package]
name = "qoi_rs"
description = "Rust port of the Quite Okay Image format"
license = "MIT"
repository = "https://github.com/whentze/qoi_rs"
version = "0.1.0"
edition = "2018"

exclude = ["/reference_images/{wallpaper,screenshots,textures,kodak}", "/.github"]

[dev-dependencies]
image = "0.23.14"
glob = "0.3.0"